--- a/style.css
+++ b/style.css
@@ -176,7 +176,12 @@ section {
 }
 
 
-
+.nav__link {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.3rem;
+    padding: .5rem;
+}
 
 
 .about__btn {
